--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,91 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --color-ui-background: theme('colors.white');
+  --color-ui-typo: theme('colors.gray.700');
+  --color-ui-sidebar: theme('colors.gray.200');
+  --color-ui-border: theme('colors.gray.300');
+  --color-ui-primary: theme('colors.indigo.600');
+  --color-ui-primary-lighter-1: theme('colors.indigo.200');
+  --color-ui-primary-lighter-2: theme('colors.indigo.100');
+}
+
+html[lights-out] {
+  --color-ui-background: theme('colors.gray.900');
+  --color-ui-typo: theme('colors.gray.100');
+  --color-ui-sidebar: theme('colors.gray.800');
+  --color-ui-border: theme('colors.gray.800');
+  --color-ui-primary: theme('colors.indigo.500');
+}
+* {
+  transition-property: color, background-color, border-color;
+  transition-duration: 200ms;
+  transition-timing-function: ease-in-out;
+}
+h1,
+h2,
+h3,
+h4 {
+  @apply leading-snug font-black mb-4 text-ui-typo;
+  &:hover {
+    a::before {
+      @apply opacity-100;
+    }
+  }
+  a {
+    &::before {
+      content: '#';
+      margin-left: -1em;
+      padding-right: 1em;
+      @apply text-ui-primary absolute opacity-0 float-left;
+    }
+  }
+}
+
+h1 {
+  @apply text-4xl;
+}
+h2 {
+  @apply text-2xl;
+}
+h3 {
+  @apply text-xl;
+}
+h4 {
+  @apply text-lg;
+}
+a:not(.active):not(.text-ui-primary):not(.text-white) {
+  @apply text-ui-typo;
+}
+p,
+ol,
+ul,
+pre,
+strong,
+blockquote {
+  @apply mb-4 text-base text-ui-typo;
+}
+
+/* header {
+  background-color: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(4px);
+}
+footer {
+  a {
+    @apply text-ui-primary underline;
+  }
+}
+
+.sidebar {
+  @apply fixed bg-ui-background px-4 inset-x-0 bottom-0 w-full border-r border-ui-border overflow-y-auto transition-all z-40;
+  transform: translateX(-100%);
+  &.open {
+    transform: translateX(0);
+  }
+  @screen lg {
+    @apply w-1/4 px-0 bg-transparent top-0 bottom-auto inset-x-auto sticky z-0;
+    transform: translateX(0);
+  }
+} */
