--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,24 +68,50 @@ blockquote {
   @apply mb-4 text-base text-ui-typo;
 }
 
-/* header {
-  background-color: rgba(255, 255, 255, 0.9);
-  backdrop-filter: blur(4px);
-}
-footer {
+.md-content {
   a {
     @apply text-ui-primary underline;
   }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply -mt-12 pt-20;
+  }
+  h2 + h3,
+  h2 + h2,
+  h3 + h3 {
+    @apply border-none -mt-20;
+  }
+  h2,
+  h3 {
+    @apply border-b border-ui-border pb-1 mb-3;
+  }
+  ul {
+    @apply list-disc;
+    ul {
+      list-style: circle;
+    }
+  }
+  ol {
+    @apply list-decimal;
+  }
+  ol,
+  ul {
+    @apply pl-5 py-1;
+    li {
+      @apply mb-2;
+      p {
+        @apply mb-0;
+      }
+      &:last-child {
+        @apply mb-0;
+      }
+    }
+  }
+  dl dd {
+    margin: 0 1.5em;
+  }
 }
-
-.sidebar {
-  @apply fixed bg-ui-background px-4 inset-x-0 bottom-0 w-full border-r border-ui-border overflow-y-auto transition-all z-40;
-  transform: translateX(-100%);
-  &.open {
-    transform: translateX(0);
-  }
-  @screen lg {
-    @apply w-1/4 px-0 bg-transparent top-0 bottom-auto inset-x-auto sticky z-0;
-    transform: translateX(0);
-  }
-} */
